--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
+        <link rel="icon" type="image/png" sizes="96x96" href="images/logoHeader.png">
+
         <title>TTS - Transervice Terminal Services</title>
         <!-- Mobile Specific Meta -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -93,8 +95,8 @@
                             <div class="carousel-caption">
                                 <h1 class="title">TRANSERVICE TERMINAL SERVICES</h1>
                                 <h3>Especiaistas En Servicios Portuarios</h3>
-                                <a  class="btn know_btn">ver mas</a>
-                                <a  class="btn know_btn">contactenos</a>
+                                <a href="#about" class="btn know_btn">ver mas</a>
+                                <a href="#contact_form" class="btn know_btn">contactenos</a>
                             </div>					
                         </div>
                     </div>
@@ -412,7 +414,7 @@
             permitan ofrecer  soluciones integrales a nuestros clientes.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">cerrar</button>
         </div>
       </div>
     </div>
@@ -437,7 +439,7 @@
             servicio dependiendo de sus necesidades.
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">cerrar</button>
         </div>
       </div>
     </div>
