--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                             <div class="carousel-caption">
                                 <h1 class="title">TRANSERVICE TERMINAL SERVICES</h1>
                                 <h3>Especiaistas En Servicios Portuarios</h3>
-                                <a href="#about" class="btn know_btn">ver mas</a>
-                                <a href="#contact_form" class="btn know_btn">contactenos</a>
+                                <a href="#about" class="btn know_btn2">ver mas</a>
+                                <a href="#contact_form" class="btn know_btn2">contactenos</a>
                             </div>					
                         </div>
                     </div>
@@ -235,7 +235,7 @@
                     <div class="col-md-4">
                         <div class="testimonial_item">
                             <div class="testimonial_content">
-                                <p>NUESTROS CLIENTES</p>
+                                <span style="font-weight:bold; font-size:25px">NUESTROS CLIENTES</span>
                             </div>
                             <!--<img src="images/testimonial_img1.png" alt="Testimonial" />
                             <p class="worker_name">john smith</p>-->
@@ -325,7 +325,7 @@
                 <div class="row">
                     <div class="col-lg-4 col-sm-7">
                         <div class="footer_item">
-                            <h4>Subre Nosotros</h4>
+                            <h4>Sobre Nosotros</h4>
                             <img class="logo" src="images/logoHeader.png" alt="Construction" />
                             <p>Transervice Terminal Services C.A, es una pequeña empresa que se fundó el 04 de Octubre del 2.010</p>
                         </div>
@@ -347,7 +347,8 @@
                             <h4>Habilidades</h4>
                             <ul class="list-unstyled post">
                                 <li style="font-size: 16px;"><span class="date"><span class="fa fa-balance-scale"></span></span> Integridad</li>
-                                <li style="font-size: 16px;"><span class="date"><span class="fa fa-balance-scale"></span></span>Compromiso</li>
+                           
+                            <li style="font-size: 16px;"><span class="date"> <span class="fa fa-check-circle"></span></span>Compromiso</li>
                                 <li style="font-size: 16px;"><span class="date"><span class="fa fa-users"></span></span>Trabajo en equipo</li>
                                 <li style="font-size: 16px;"><span class="date"><span class="fa fa-lightbulb" style="width:47%"></span></span>Innovacion</li>
                             </ul>
